Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/cpp/vita49/gui/vrt_parser_gui/sm_api.h


        typedef long long          int64_t;
        typedef unsigned char      uint8_t;
        typedef unsigned short     uint16_t;
        typedef unsigned long long uint64_t;
typedef enum SmStatus {
    smCalErr = -1003,
    smMeasErr = -1002,
    smErrorIOErr = -1001,
    smInvalidCalibrationFileErr = -200,
    smInvalidCenterFreqErr = -101,
    smInvalidIQDecimationErr = -100,
    smJESDErr = -54,
    smNetworkErr = -53,
    smFx3RunErr = -52,
    smMaxDevicesConnectedErr = -51,
    smFPGABootErr = -50,
    smBootErr = -49,
    smGpsNotLockedErr = -16,
    smVersionMismatchErr = -14,
    smAllocationErr = -13,
    smSyncErr = -11,
    smInvalidSweepPosition = -10,
    smInvalidConfigurationErr = -8,
    smConnectionLostErr = -6,
    smInvalidParameterErr = -5,
    smNullPtrErr = -4,
    smInvalidDeviceErr = -3,
    smDeviceNotFoundErr = -2,
    smNoError = 0,
    smSettingClamped = 1,
    smAdcOverflow = 2,
    smUncalData = 3,
    smTempDriftWarning = 4,
    smSpanExceedsPreselector = 5,
    smTempHighWarning = 6,
    smCpuLimited = 7,
    smUpdateAPI = 8,
    smInvalidCalData = 9,
} SmStatus;
typedef enum SmMode {
    smModeIdle = 0,
    smModeSweeping = 1,
    smModeRealTime = 2,
    smModeIQStreaming = 3,
    smModeIQSegmentedCapture = 5,
    smModeIQSweepList = 6,
    smModeAudio = 4,
    smModeIQ = 3,
} SmMode;
typedef enum SmTriggerType {
    smTriggerTypeImm = 0,
    smTriggerTypeVideo = 1,
    smTriggerTypeExt = 2,
    smTriggerTypeFMT = 3
} SmTriggerType;
typedef enum SmBool {
    smFalse = 0,
    smTrue = 1
} SmBool;
SM_API SmStatus smConfigure(int device, SmMode mode);
SM_API SmStatus smGetCurrentMode(int device, SmMode *mode);
SM_API SmStatus smAbort(int device);
SM_API SmStatus smGetSweepParameters(int device,
                                     double *actualRBW,
                                     double *actualVBW,
                                     double *actualStartFreq,
                                     double *binSize,
                                     int *sweepSize);
SM_API SmStatus smGetRealTimeParameters(int device,
                                        double *actualRBW,
                                        int *sweepSize,
                                        double *actualStartFreq,
                                        double *binSize,
                                        int *frameWidth,
                                        int *frameHeight,
                                        double *poi);
SM_API SmStatus smGetIQParameters(int device, double *sampleRate, double *bandwidth);
SM_API SmStatus smGetIQCorrection(int device, float *scale);
SM_API SmStatus smIQSweepListGetCorrections(int device, float *corrections);
SM_API SmStatus smSegIQGetMaxCaptures(int device, int *maxCaptures);
SM_API SmStatus smGetSweep(int device, float *sweepMin, float *sweepMax, int64_t *nsSinceEpoch);
SM_API SmStatus smStartSweep(int device, int pos);
SM_API SmStatus smFinishSweep(int device, int pos, float *sweepMin, float *sweepMax, int64_t *nsSinceEpoch);
SM_API SmStatus smGetRealTimeFrame(int device,
                                   float *colorFrame,
                                   float *alphaFrame,
                                   float *sweepMin,
                                   float *sweepMax,
                                   int *frameCount,
                                   int64_t *nsSinceEpoch);
SM_API SmStatus smGetIQ(int device,
                        void *iqBuf,
                        int iqBufSize,
                        double *triggers,
                        int triggerBufSize,
                        int64_t *nsSinceEpoch,
                        SmBool purge,
                        int *sampleLoss,
                        int *samplesRemaining);
SM_API SmStatus smIQSweepListGetSweep(int device, void *dst, int64_t *timestamps);
SM_API SmStatus smIQSweepListStartSweep(int device, int pos, void *dst, int64_t *timestamps);
SM_API SmStatus smIQSweepListFinishSweep(int device, int pos);
SM_API SmStatus smSegIQCaptureStart(int device, int capture);
SM_API SmStatus smSegIQCaptureWait(int device, int capture);
SM_API SmStatus smSegIQCaptureWaitAsync(int device, int capture, SmBool *completed);
SM_API SmStatus smSegIQCaptureTimeout(int device, int capture, int segment, SmBool *timedOut);
SM_API SmStatus smSegIQCaptureTime(int device, int capture, int segment, int64_t *nsSinceEpoch);
SM_API SmStatus smSegIQCaptureRead(int device, int capture, int segment, void *iq, int offset, int len);
SM_API SmStatus smSegIQCaptureFinish(int device, int capture);
SM_API SmStatus smSegIQCaptureFull(int device,
                                   int capture,
                                   void *iq,
                                   int offset,
                                   int len,
                                   int64_t *nsSinceEpoch,
                                   SmBool *timedOut);
SM_API SmStatus smSegIQLTEResample(float *input,
                                   int inputLen,
                                   float *output,
                                   int *outputLen,
                                   bool clearDelayLine);
SM_API SmStatus smSetIQFullBandAtten(int device, int atten);
SM_API SmStatus smSetIQFullBandCorrected(int device, SmBool corrected);
SM_API SmStatus smSetIQFullBandSamples(int device, int samples);
SM_API SmStatus smSetIQFullBandTriggerType(int device, SmTriggerType triggerType);
SM_API SmStatus smSetIQFullBandVideoTrigger(int device, double triggerLevel);
SM_API SmStatus smSetIQFullBandTriggerTimeout(int device, double triggerTimeout);
SM_API SmStatus smGetIQFullBand(int device, float *iq, int freq);
SM_API SmStatus smGetIQFullBandSweep(int device, float *iq, int startIndex, int stepSize, int steps);
SM_API SmStatus smGetAudio(int device, float *audio);
SM_API SmStatus smGetGPSInfo(int device,
                             SmBool refresh,
                             SmBool *updated,
                             int64_t *secSinceEpoch,
                             double *latitude,
                             double *longitude,
                             double *altitude,
                             char *nmea,
                             int *nmeaLen);
SM_API SmStatus smWriteToGPS(int device, const uint8_t *mem, int len);
SM_API SmStatus smSetFanThreshold(int device, int temp);
SM_API SmStatus smGetFanThreshold(int device, int *temp);
SM_API SmStatus smSetIFOutput(int device, double frequency);
SM_API SmStatus smGetCalDate(int device, uint64_t *lastCalDate);
SM_API SmStatus smBroadcastNetworkConfig(const char *hostAddr,
                                         const char *deviceAddr,
                                         uint16_t port,
                                         SmBool nonVolatile);
SM_API SmStatus smNetworkConfigGetDeviceList(int *serials, int *deviceCount);
SM_API SmStatus smNetworkConfigOpenDevice(int *device, int serialNumber);
SM_API SmStatus smNetworkConfigCloseDevice(int device);
SM_API SmStatus smNetworkConfigGetMAC(int device, char *mac);
SM_API SmStatus smNetworkConfigSetIP(int device, const char *addr, SmBool nonVolatile);
SM_API SmStatus smNetworkConfigGetIP(int device, char *addr);
SM_API SmStatus smNetworkConfigSetPort(int device, int port, SmBool nonVolatile);
SM_API SmStatus smNetworkConfigGetPort(int device, int *port);
SM_API const char* smGetAPIVersion();
SM_API const char* smGetErrorString(SmStatus status);