Experimentation/JorgeVsg/signal_hound_sdk/device_apis/sm_series/examples/csharp/sm_api.cs


    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smConfigure(int device, SmMode mode);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetCurrentMode(int device, ref SmMode mode);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smAbort(int device);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetSweepParameters(int device, ref double actualRBW,
        ref double actualVBW, ref double actualStartFreq, ref double binSize, ref int sweepSize);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetRealTimeParameters(int device, ref double actualRBW,
        ref int sweepSize, ref double actualStartFreq, ref double binSize, ref int frameWidth,
        ref int frameHeight, ref double poi);
    // Retrieve I/Q parameters for streaming and segmented I/Q captures.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQParameters(int device, ref double sampleRate,
        ref double bandwidth);
    // Retrieve the correction factor/scalar for streaming and segmented I/Q captures.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQCorrection(int device, ref float scale);
    // Retrieve correction factors for an I/Q sweep list measurement.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smIQSweepListGetCorrections(int device, ref float corrections);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQGetMaxCaptures(int device, ref int maxCaptures);

    // Performs a single sweep, blocking function
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetSweep(int device, float[] sweepMin,
        float[] sweepMax, ref long nsSinceEpoch);

    // Queued sweep mechanisms
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smStartSweep(int device, int pos);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smFinishSweep(int device, int pos,
        float[] sweepMin, float[] sweepMax, ref long nsSinceEpoch);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetRealTimeFrame(int device, float[] colorFrame,
        float[] alphaFrame, float[] sweepMin, float[] sweepMax, ref int frameCount,
        ref long nsSinceEpoch);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQ(int device, float[] iqBuf, int iqBufSize,
        double[] triggers, int triggerBufSize, ref long nsSinceEpoch, SmBool purge,
        ref int sampleLoss, ref int samplesRemaining);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smIQSweepListGetSweep(int device, float[] dst, long[] timestamps);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smIQSweepListStartSweep(int device, int pos, float[] dst, long[] timestamps);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smIQSweepListFinishSweep(int device, int pos);

    // Segmented I/Q acquisition functions, SM200B/SM435B only
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureStart(int device, int capture);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureWait(int device, int capture);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureWaitAsync(int device, int capture, ref SmBool completed);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureTimeout(int device, int capture, int segment, ref SmBool timedOut);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureTime(int device, int capture, int segment, ref long nsSinceEpoch);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureRead(int device, int capture, int segment, float[] iq, int offset, int len);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureFinish(int device, int capture);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQCaptureFull(int device, int capture, float[] iq, int offset, int len,
        ref long nsSinceEpoch, ref SmBool timedOut);
    // Convenience function to resample a 250 MS/s capture to the LTE rate of 245.76 MS/s
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSegIQLTEResample(ref float input, int inputLen, ref float output, ref int outputLen, bool clearDelayLine);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandAtten(int device, int atten);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandCorrected(int device, SmBool corrected);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandSamples(int device, int samples);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandTriggerType(int device, SmTriggerType triggerType);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandVideoTrigger(int device, double triggerLevel);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIQFullBandTriggerTimeout(int device, double triggerTimeout);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQFullBand(int device, float[] iq, int freq);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetIQFullBandSweep(int device, float[] iq, int startIndex, int stepSize, int steps);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetAudio(int device, float[] audio);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetGPSInfo(int device, SmBool refresh,
        ref SmBool updated, ref long secSinceEpoch, ref double latitude,
        ref double longitude, ref double altitude, char[] nmea, ref int nmeaLen);

    // Device must have GPS write capability. See API manual for more information.
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smWriteToGPS(int device, in byte[] mem, int len);

    // Accepts values between [10-90] as the temp threshold for when the fan turns on
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetFanThreshold(int device, int temp);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetFanThreshold(int device, ref int temp);

    // Must be SM435 device with IF output option
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smSetIFOutput(int device, double frequency);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smGetCalDate(int device, ref ulong lastCalDate);

    // Configure 10GbE network parameters via the network
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smBroadcastNetworkConfig(StringBuilder hostAddr, StringBuilder deviceAddr, ushort port, SmBool nonVolatile);
    // Configure 10GbE network parameters via USB
    // Device handle for these functions cannot be used with others
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkConfigGetDeviceList(int[] serials, ref int deviceCount);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkConfigOpenDevice(ref int device, int serialNumber);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkConfigCloseDevice(int device);    
    public static string smNetworkConfigGetMACString(int device)
    {
        IntPtr strPtr = Marshal.StringToHGlobalAnsi("XX-XX-XX-XX-XX-XX\0");
        smNetworkConfigGetMAC(device, strPtr);
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(strPtr);
    }
    public static SmStatus smNetworkConfigSetIPString(int device, string addr, SmBool nonVolatile)
    {
        IntPtr strPtr = System.Runtime.InteropServices.Marshal.StringToCoTaskMemAnsi(addr);
        return smNetworkConfigSetIP(device, strPtr, nonVolatile);
    }
    public static string smNetworkConfigGetIPString(int device)
    {
        IntPtr strPtr = Marshal.StringToHGlobalAnsi("XXX.XXX.XXX.XXX\0");
        smNetworkConfigGetIP(device, strPtr);
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(strPtr);
    }
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkConfigSetPort(int device, int port, SmBool nonVolatile);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    public static extern SmStatus smNetworkConfigGetPort(int device, ref int port);

    public static string smGetAPIString()
    {
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(smGetAPIVersion());
    }

    public static string smGetStatusString(SmStatus status)
    {
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(smGetErrorString(status));
    }

    public static string smGetProductString()
    {
        return System.Runtime.InteropServices.Marshal.PtrToStringAnsi(smGetProductID());
    }

    // Call string variants above instead
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern SmStatus smNetworkConfigGetMAC(int device, IntPtr mac);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern SmStatus smNetworkConfigSetIP(int device, in IntPtr addr, SmBool nonVolatile);
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern SmStatus smNetworkConfigGetIP(int device, IntPtr addr);

    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern IntPtr smGetAPIVersion();
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern IntPtr smGetProductID();
    [DllImport("sm_api.dll", CallingConvention = CallingConvention.Cdecl)]
    private static extern IntPtr smGetErrorString(SmStatus status);
}
